--- a/gradle.properties
+++ b/gradle.properties
@@ -1,20 +1,33 @@
+# ===============================
 # Minecraft / Java
+# ===============================
 minecraft_version=1.20.1
 java_version=17
-org.gradle.java.home=E:/minecraft/JDK/jdk-17.0.12
-org.gradle.jvmargs=-Dfile.encoding=UTF-8
 
+# ===============================
+# Mod Info
+# ===============================
+mod_version=1.0.0
+maven_group=com.yourname.yourmod
+archives_base_name=yourmod
+
+# ===============================
 # Fabric
+# ===============================
 fabric_loader_version=0.15.6
 yarn_mappings=1.20.1+build.3
+fabric_api_version=0.92.0+1.20.1
 
-# Gradle 最適化
-org.gradle.jvmargs=-Xmx4G -XX:+UseG1GC
+# ===============================
+# Gradle Optimization
+# ===============================
+org.gradle.jvmargs=-Xmx4G -XX:+UseG1GC -Dfile.encoding=UTF-8
 org.gradle.parallel=true
 org.gradle.caching=true
 org.gradle.daemon.idletimeout=60000
 
-# ダウンロードタイムアウトを延長
+# ===============================
+# Network Timeout
+# ===============================
 org.gradle.internal.http.connectionTimeout=120000
 org.gradle.internal.http.socketTimeout=120000
-org.gradle.jvmargs=-Xmx4G -Dfile.encoding=UTF-8
